syntax = "proto3";

package mock.server.grpc;

option java_multiple_files = true;
option java_package = "org.yefei.qa.mock.grpc.idl";

service VariableService {
    rpc PreDefine (VariableDefineRequest) returns (VariableDefineResp) {
    }
}


message VariableDefineRequest {
    repeated Variable variableList = 1;
}

message Variable {
    string name = 1;
    string value = 2;
}

message VariableDefineResp {
    bool success = 1;
    repeated Variable variableList = 2;
}


